--- a/skaffold.yml
+++ b/skaffold.yml
@@ -12,6 +12,7 @@ build:
       context: auth
       docker:
         dockerfile: Dockerfile
+        noCache: true
       sync:
         manual:
           - src: 'src/**/*.ts'
@@ -20,6 +21,7 @@ build:
       context: tickets
       docker:
         dockerfile: Dockerfile
+        noCache: true
       sync:
         manual:
           - src: 'src/**/*.ts'
@@ -28,6 +30,16 @@ build:
       context: orders
       docker:
         dockerfile: Dockerfile
+        noCache: true
+      sync:
+        manual:
+          - src: 'src/**/*.ts'
+            dest: .
+    - image: nanosrlabs/expiration
+      context: expiration
+      docker:
+        dockerfile: Dockerfile
+        noCache: true
       sync:
         manual:
           - src: 'src/**/*.ts'
@@ -36,6 +48,7 @@ build:
       context: client
       docker:
         dockerfile: Dockerfile
+        noCache: true
       sync:
         manual:
           - src: '**/*.(js|jsx)'
