--- a/skaffold.yml
+++ b/skaffold.yml
@@ -44,6 +44,15 @@ build:
         manual:
           - src: 'src/**/*.ts'
             dest: .
+    - image: nanosrlabs/payments
+      context: payments
+      docker:
+        dockerfile: Dockerfile
+        noCache: true
+      sync:
+        manual:
+          - src: 'src/**/*.ts'
+            dest: .
     - image: nanosrlabs/clientnext
       context: client
       docker:
