--- a/payments/package.json
+++ b/payments/package.json
@@ -31,6 +31,7 @@
     "mongoose": "^6.0.13",
     "mongoose-update-if-current": "^1.4.0",
     "node-nats-streaming": "^0.3.2",
+    "stripe": "^8.191.0",
     "ts-node-dev": "^1.1.8",
     "typescript": "^4.5.2"
   },
