--- a/client/package.json
+++ b/client/package.json
@@ -16,7 +16,9 @@
     "bootstrap": "^5.1.3",
     "bootstrap-icons": "^1.7.1",
     "next": "^12.0.4",
+    "prop-types": "^15.7.2",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "react-stripe-checkout": "^2.6.3"
   }
 }
